# pytxc

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile  pyproject.toml  setup.cfg
.github/workflows/: pypi.yml  test.yml
docs/: conf.py  index.md  installation.md  usage.md
pytxc/: __init__.py  base.py  common.py  constants.py  datasets.py  elements.py  journeys.py  links.py  locations.py  operators.py  patterns.py  routes.py  services.py  stops.py  timetables.py  txc.py  vehicles.py
pytxc/journeys/: operations.py  patterns.py  vehicles.py
tests/: conftest.py  constants.py  test_dataset.py  test_elements.py  test_files.py  test_journeys.py  test_lines.py  test_links.py  test_locations.py  test_operating_periods.py  test_operators.py  test_routes.py  test_services.py  test_stops.py  test_timetables.py  test_txc.py
tests/data/: 1-None--STCR-CZ-2021-10-03-TXC_CZ20211003-BODS_V1_1.xml  stockton_35.xml
tests/snapshots/: snap_test_dataset.py  snap_test_files.py  snap_test_lines.py  snap_test_locations.py  snap_test_operating_periods.py  snap_test_operators.py  snap_test_routes.py  snap_test_services.py  snap_test_stops.py  snap_test_timetables.py
tests/test_journeys/: test_operations.py  test_patterns.py  test_vehicles.py
tests/test_journeys/snapshots/: snap_test_operations.py  snap_test_patterns.py  snap_test_vehicles.py
