[tool.poetry]
name = "pytxc"
version = "0.1.0"
description = "Python parser from TransXChange."
authors = ["Ciaran McCormick <ciaran@ciaranmccormick.com>"]
license = "MIT"

[tool.poetry.dependencies]
lxml = "^4.7.1"
pydantic = "^1.8.2"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
ipdb = "^0.13.9"
ipython = "^7.30.1"
isort = "^5.10.1"
lxml-stubs = "^0.3.0"
mypy = "^0.920"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
