[tool.poetry]
name = "pytxc"
version = "0.1.3"
description = "Python parser from TransXChange."
authors = ["Ciaran McCormick <ciaran@ciaranmccormick.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Shapely = "^1.8.1"
lxml = "^4.7.1"
pyproj = "^3.3.0"
python-dateutil = "^2.8.2"
requests = "^2.27.1"
shapely-geojson = "^0.0.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
bandit = "^1.7.2"
black = "~22.3.0"
flake8 = "^4.0.1"
ipdb = "^0.13.9"
ipython = "~8.0.1"
isort = "^5.10.1"
lxml-stubs = "^0.3.0"
mypy = "^0.920"
myst-parser = "^0.17.0"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
safety = "^1.10.3"
sphinx-rtd-theme = "^1.0.0"
types-requests = "^2.27.9"
types-python-dateutil = "^2.8.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.bandit]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.bandit.any_other_function_with_shell_equals_true]
no_shell = [
  "os.execl",
  "os.execle",
  "os.execlp",
  "os.execlpe",
  "os.execv",
  "os.execve",
  "os.execvp",
  "os.execvpe",
  "os.spawnl",
  "os.spawnle",
  "os.spawnlp",
  "os.spawnlpe",
  "os.spawnv",
  "os.spawnve",
  "os.spawnvp",
  "os.spawnvpe",
  "os.startfile"
]
shell = [
  "os.system",
  "os.popen",
  "os.popen2",
  "os.popen3",
  "os.popen4",
  "popen2.popen2",
  "popen2.popen3",
  "popen2.popen4",
  "popen2.Popen3",
  "popen2.Popen4",
  "commands.getoutput",
  "commands.getstatusoutput"
]
subprocess = [
  "subprocess.Popen",
  "subprocess.call",
  "subprocess.check_call",
  "subprocess.check_output"
]
