[tool.poetry]
name = "pytxc"
version = "0.2.0"
description = "Python parser from TransXChange."
authors = ["Ciaran McCormick <ciaran@ciaranmccormick.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.7.1"
pydantic = "^1.10.0"
pyproj = "^3.3.0"
python-dateutil = "^2.8.2"
requests = "^2.27.1"
shapely = "^1.8.1"
shapely-geojson = "^0.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
ipdb = "^0.13.9"
ipython = "^8.0.1"
isort = "^5.10.1"
mypy = "^0.991"
pip-audit = "^2.4.5"
pre-commit = "^2.16.0"

[tool.poetry.group.stubs.dependencies]
types-python-dateutil = "^2.8.11"
types-requests = "^2.27.9"
lxml-stubs = "^0.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
snapshottest = "^0.6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
parallel = true
branch = true
source = ["pytxc"]

[tool.coverage.paths]
source = ["pytxc", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["**/snapshottest/**"]
exclude_lines = [
    # a more strict default pragma
    "\\# pragma: no cover\\b",

    # allow defensive code
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
    "^\\s*return NotImplemented\\b",
    "^\\s*raise$",

    # typing-related code
    "^if (False|TYPE_CHECKING):",
    ": \\.\\.\\.(\\s*#.*)?$",
    "^ +\\.\\.\\.$",
    "-> ['\"]?NoReturn['\"]?:",
]
